--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.15",
     "next": "15.3.1",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
