--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.15",
+    "@tanstack/react-query": "^5.90.5",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.12.2",
+    "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "next": "15.3.1",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.1.15"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.15",
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
