--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.15",
     "@tanstack/react-query": "^5.90.5",
-    "@types/axios": "^0.9.36",
     "axios": "^1.12.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "lucide-react": "^0.546.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.15",
     "yup": "^1.7.1",
@@ -36,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "husky": "^9.1.7",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   },
   "main": "commitlint.config.js",
