--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
